syntax = "proto3";

package yayti.items;

message VisitorData {
  string visitor_id = 1;
  int64 timestamp = 5;
}

message PlayerParams {
  int32 param = 30;
}
